CData.Quickbooks has been added along with an inventory controller.  Next step is to read the file.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "RaymarAzureConnection": "Server=tcp:greatfurnituresql.database.windows.net,1433;Initial Catalog=RaymarInventoryDB;Persist Security Info=False;User ID=BAZiegler;Password=Thr!ve2028AD;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "OpenAI": {
+    "ApiKey": "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",
+    "DefaultTimeOut": 2,
+    "Retries": 5,
+    "BatchSize": 5
+  },
   "AllowedHosts": "*"
 }
