Removed API key.

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
     "QuickBooksODBCConnection": "DSN=CData QuickBooks Source;SERVER=QODBC;Optimizer=1;OpenMode=1;SSL=0;ReadOnly=0;DynamicCursors=1;ServerType=SQL;"
   },
   "OpenAI": {
-    "ApiKey": "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",
+    "ApiKey": "",
     "DefaultTimeOut": 2,
     "Retries": 5,
     "BatchSize": 5
