--- a/.github/workflows/main_raymarinventoryapi.yml
+++ b/.github/workflows/main_raymarinventoryapi.yml
@@ -25,7 +25,7 @@ jobs:
         run: dotnet build RaymarEquipmentInventory.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish RaymarEquipmentInventory.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish RaymarEquipmentInventory.csproj -c Release -o ./myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
