Removed hangfire call from this version.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,14 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "RaymarAzureConnection": "Server=tcp:greatfurnituresql.database.windows.net,1433;Initial Catalog=RaymarInventoryDB;Persist Security Info=False;User ID=BAZiegler;Password=Thr!ve2028AD;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "QuickBooksConnection": "URL=D:\\2024Work\\Raymar-QuickBooks\\Sample_Pro.qbw;User=Admin;Password=Thr!ve2028AD;",
-    "QuickBooksODBCConnection": "DSN=CData QuickBooks Source;SERVER=QODBC;Optimizer=1;OpenMode=1;SSL=0;ReadOnly=0;DynamicCursors=1;ServerType=SQL;"
-  },
-  "OpenAI": {
-    "DefaultTimeOut": 2,
-    "Retries": 5,
-    "BatchSize": 5
+    "RaymarAzureConnection": "Server=tcp:greatfurnituresql.database.windows.net,1433;Initial Catalog=RaymarInventoryDB;Persist Security Info=False;User ID=BAZiegler;Password=Thr!ve2028AD;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"QuickBooksConnection": "URL=D:\\2024Work\\Raymar-QuickBooks\\Sample_Pro.qbw;User=Admin;Password=Thr!ve2028AD;",
+    //"QuickBooksODBCConnection": "DSN=CData QuickBooks Source;SERVER=QODBC;Optimizer=1;OpenMode=1;SSL=0;ReadOnly=0;DynamicCursors=1;ServerType=SQL;"
   },
   "AllowedHosts": "*"
 }
