--- a/.github/workflows/main_raymarinventoryapi.yml
+++ b/.github/workflows/main_raymarinventoryapi.yml
@@ -23,10 +23,13 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build RaymarEquipmentInventory.csproj --configuration Release
+        env:                         # Add environment variable for the build step
+          SAMSARA_API_TOKEN: ${{ secrets.SAMSARA_API_TOKEN }}
 
       - name: dotnet publish
         run: dotnet publish RaymarEquipmentInventory.csproj -c Release -o ./myapp
-
+        env:  # Add environment variable for the publish step
+          SAMSARA_API_TOKEN: ${{ secrets.SAMSARA_API_TOKEN }}
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -62,4 +65,5 @@ jobs:
           app-name: 'RaymarInventoryAPI'
           slot-name: 'Production'
           package: .
-          
+        env:                         # Add environment variable for the deploy step
+            SAMSARA_API_TOKEN: ${{ secrets.SAMSARA_API_TOKEN }}
