Adjusted API Service, removed sensitive information!

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,8 @@
     //"QuickBooksConnection": "URL=D:\\2024Work\\Raymar-QuickBooks\\Sample_Pro.qbw;User=Admin;Password=Thr!ve2028AD;",
     "QuickBooksODBCConnection": "DSN=CDataQBDataSource;SERVER=QODBC;Optimizer=1;OpenMode=1;SSL=0;ReadOnly=0;DynamicCursors=1;ServerType=SQL;"
   },
+  "SamsaraApi": {
+    "BaseUrl": "https://api.samsara.com"
+  },
   "AllowedHosts": "*"
 }
