Finalzing changes for very first API test run. Lots to do still though!

--- a/efpt.config.json
+++ b/efpt.config.json
@@ -63,6 +63,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[TechnicianWorkOrder]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[VehicleData]",
          "ObjectType": 0
       },
