--- a/efpt.config.json
+++ b/efpt.config.json
@@ -23,6 +23,14 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[Documents]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[DocumentTypes]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[IncomeAccount]",
          "ObjectType": 0
       },
