Almost done with Azure upload of documents.  Remember to put in Github and Azure and CI/CD - the proper key.

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,5 +13,8 @@
   "SamsaraApi": {
     "BaseUrl": "https://api.samsara.com"
   },
+  "AzureStorage": {
+    "ConnectionString": ""
+  },
   "AllowedHosts": "*"
 }
