--- a/.github/workflows/main_raymarinventoryapi.yml
+++ b/.github/workflows/main_raymarinventoryapi.yml
@@ -25,14 +25,13 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish RaymarEquipmentInventory.csproj -c Release -o ./output
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
-
+          path: ./output
   deploy:
     runs-on: windows-latest
     needs: build
@@ -61,5 +60,5 @@ jobs:
         with:
           app-name: 'RaymarInventoryAPI'
           slot-name: 'Production'
-          package: .
+          package: ./app
           
