--- a/.github/workflows/main_raymarinventoryapi.yml
+++ b/.github/workflows/main_raymarinventoryapi.yml
@@ -37,18 +37,17 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write  # This is required for requesting the JWT
+      id-token: write
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-          path: ./app
       
-      - name: List contents of app directory
-        run: ls -R ./app
-      
+      - name: List contents of downloaded directory
+        run: ls -R
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -62,7 +61,8 @@ jobs:
         with:
           app-name: 'RaymarInventoryAPI'
           slot-name: 'Production'
-          package: ./app/**
+          package: ./.net-app
+
 
 
           
