--- a/.github/workflows/main_raymarinventoryapi.yml
+++ b/.github/workflows/main_raymarinventoryapi.yml
@@ -47,9 +47,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: List contents of downloaded directory
-        run: ls -R
+        run: ls -R ./.net-app
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -62,9 +62,11 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'RaymarInventoryAPI'
+          app-name: 'RaymarEquipmentInventory'
           slot-name: 'Production'
           package: ./.net-app
+
+
 
 
 
