--- a/.github/workflows/main_raymarinventoryapi.yml
+++ b/.github/workflows/main_raymarinventoryapi.yml
@@ -62,7 +62,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'RaymarEquipmentInventory'
+          app-name: 'RaymarInventoryAPI'
           slot-name: 'Production'
           package: ./.net-app
 
