--- a/.github/workflows/main_raymarinventoryapi.yml
+++ b/.github/workflows/main_raymarinventoryapi.yml
@@ -49,7 +49,7 @@ jobs:
           name: .net-app
 
       - name: List contents of downloaded directory
-        run: ls -R ./.net-app
+        run: ls -R 
 
       - name: Login to Azure
         uses: azure/login@v2
