--- a/.github/workflows/main_raymarinventoryapi.yml
+++ b/.github/workflows/main_raymarinventoryapi.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           app-name: 'RaymarInventoryAPI'
           slot-name: 'Production'
-          package: ./.net-app
+          package: .
 
 
 
