--- a/efpt.config.json
+++ b/efpt.config.json
@@ -39,6 +39,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[InventoryDocument]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Labour]",
          "ObjectType": 0
       },
