Getting parts by work order.

--- a/efpt.config.json
+++ b/efpt.config.json
@@ -59,6 +59,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[PlaceholderDocument]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[ServiceDescription]",
          "ObjectType": 0
       },
