--- a/.github/workflows/main_raymarequipapp01.yml
+++ b/.github/workflows/main_raymarequipapp01.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - RaymarEquipApp01
 
 on:
@@ -27,14 +24,14 @@ jobs:
       - name: dotnet publish
         run: |
           dotnet publish RaymarEquipmentInventory.csproj -c Release -o "./myapp"
-          Compress-Archive -Path "./myapp/*" -DestinationPath "./myapp.zip"   # Use PowerShell to create a ZIP file
+          Compress-Archive -Path "./myapp/*" -DestinationPath "./myapp.zip"
         shell: pwsh
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ./myapp.zip   # Upload the zip file as the artifact
+          path: ./myapp.zip
 
   deploy:
     runs-on: windows-latest
@@ -43,7 +40,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write # This is required for requesting the JWT
+      id-token: write
 
     steps:
       - name: Download artifact from build job
@@ -54,18 +51,22 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_EE2D3F8CD53D461983D7F2E649F6909C }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C25373A2BA41446BB3EC203AE590F8AF }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_021B4E57428C45B3B20D8702858BB73D }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
       - name: Set SCM_DO_BUILD_DURING_DEPLOYMENT to true
         run: |
-          az webapp config appsettings set --name 'RaymarEquipApp01' --resource-group 'RaymarEquipService' --settings SCM_DO_BUILD_DURING_DEPLOYMENT=true
+          az webapp config appsettings set --name 'RaymarEquipApp01' \
+            --resource-group 'RaymarEquipService' \
+            --settings SCM_DO_BUILD_DURING_DEPLOYMENT=true
         shell: pwsh
 
-      - name: Restart Azure Web App (optional)
+      # Restart Web App to clear any locked files
+      - name: Restart Azure Web App
         run: |
           az webapp restart --name 'RaymarEquipApp01' --resource-group 'RaymarEquipService'
+        shell: pwsh
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -73,8 +74,9 @@ jobs:
         with:
           app-name: 'RaymarEquipApp01'
           slot-name: 'Production'
-          package: './myapp.zip'   # Deploy the zip file
-          clean: true              # Ensure that previous files are removed
-          enable-app-offline: true # Temporarily take the app offline to avoid file locks
+          package: './myapp.zip'
+          clean: true
+          enable-app-offline: true
+
 
           
