--- a/efpt.config.json
+++ b/efpt.config.json
@@ -127,6 +127,10 @@
          "ObjectType": 3
       },
       {
+         "Name": "[dbo].[vw_WorkOrderStatusWithType]",
+         "ObjectType": 3
+      },
+      {
          "Name": "[dbo].[vw_WorkOrderTechnicians]",
          "ObjectType": 3
       }
