Has a failed sync log for failing to get from the w/o.

--- a/efpt.config.json
+++ b/efpt.config.json
@@ -32,6 +32,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[FailedSyncLog]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[FlatLabour]",
          "ObjectType": 0
       },
