EnsureFolderExistsAsync has been edited to check a GoogleDriveFolders table first.

--- a/efpt.config.json
+++ b/efpt.config.json
@@ -40,6 +40,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[GoogleDriveFolders]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[HourlyLabourType]",
          "ObjectType": 0
       },
