--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ bin/
 taskfueluploader-097ea40f8784.json
 service-account.json
 launchSettings.json
+taskfuelrepo-1844dd16e91c.json
+raymaroutgoingemail-b680de6e57a4.json
+drive-user-token.json.enc
