Okay, now checking by labour type. Let's rip.

--- a/efpt.config.json
+++ b/efpt.config.json
@@ -88,6 +88,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[PDFTags]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Person]",
          "ObjectType": 0
       },
