--- a/efpt.config.json
+++ b/efpt.config.json
@@ -60,6 +60,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[DriveFileMetadata]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[FailedSyncLog]",
          "ObjectType": 0
       },
