--- a/efpt.config.json
+++ b/efpt.config.json
@@ -32,6 +32,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[CustomerTombstone]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[DI_AllowedKeywords]",
          "ObjectType": 0
       },
