Upsert and retrieve viewed pdfs per work order.

--- a/efpt.config.json
+++ b/efpt.config.json
@@ -152,6 +152,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[PDFViewedForSheet]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Person]",
          "ObjectType": 0
       },
