QBWCSoapService update for customers.

--- a/efpt.config.json
+++ b/efpt.config.json
@@ -32,6 +32,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[CustomerBackup]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[CustomerTombstone]",
          "ObjectType": 0
       },
